# via

./: .gitignore  Cargo.toml  README.md  src.rs
.github/workflows/: ci.yaml
.zed/: settings.json
examples/: Cargo.toml  README.md  cookies.rs  echo.rs  files.rs  hello.rs  json.rs
examples/chat/: Cargo.toml  README.md  compose.yaml  example.env
examples/chat-api/: main.rs
examples/chat-api/routes/: auth.rs  channels.rs  chat.rs  mod.rs  reactions.rs  threads.rs
examples/chat/migrations/2025-11-04-181606-0000_create_users/: up.sql
examples/chat/migrations/2025-11-04-181609-0000_create_channels/: up.sql
examples/chat/migrations/2025-11-04-181615-0000_create_threads/: down.sql  up.sql
examples/chat/migrations/2025-11-04-181617-0000_create_reactions/: down.sql  up.sql
examples/chat/migrations/2025-11-11-150422-0000_create_subscriptions/: up.sql
examples/chat/migrations/2025-11-16-160856-0000_create_before_keyset_fn/: up.sql
examples/chat/src/: app.rs  chat.rs  main.rs  schema.rs
examples/chat/src/database/: conn.rs  mod.rs  schema.rs  table.rs
examples/chat/src/database/models/: channel.rs  mod.rs  reaction.rs  subscription.rs  user.rs
examples/chat/src/models/: channel.rs  mod.rs  reaction.rs  subscription.rs  thread.rs  user.rs
examples/chat/src/routes/: auth.rs  channels.rs  chat.rs  mod.rs  orgs.rs  reactions.rs  threads.rs  users.rs
examples/chat/src/util/: env.rs  id.rs  mod.rs  page.rs  session.rs
examples/chat/src/util/pubsub/: mod.rs  shared_str.rs
examples/chat/src/util/session/: mod.rs
examples/cookies/src/: main.rs
examples/files/: main.rs  serve.rs
examples/native-tls/: main.rs  self-sign-cert.sh
examples/rustls/: main.rs  self-sign-cert.sh
examples/shared-state/src/: main.rs
examples/tls/: native.rs  rustls.rs  self-sign-rustls.sh
src/: cookies.rs  lib.rs  next.rs  rest.rs
src/app/: mod.rs  service.rs  shared.rs
src/error/: mod.rs  raise.rs  rescue.rs  server.rs
src/request/: mod.rs  params.rs  payload.rs  query.rs  request.rs
src/response/: body.rs  builder.rs  file.rs  mod.rs  response.rs
src/router/: allow.rs  mod.rs  route.rs
src/server/: accept.rs  io.rs  mod.rs  tls.rs
src/util/: uri_encoding.rs
src/ws/: channel.rs  error.rs  io.rs  mod.rs  request.rs  upgrade.rs
via/: Cargo.toml
via-diesel/: Cargo.toml  README.md
via-diesel/src/: lib.rs  macros.rs  paginate.rs  prelude.rs  query_dsl.rs
via-macros/: Cargo.toml
via-macros/src/: guard.rs  lib.rs  resource.rs
via-pubsub/: Cargo.toml  README.md
via-pubsub/src/: lib.rs  opaque.rs  pubsub.rs
via-pubsub/src/backend/: mod.rs  redis.rs  signed.rs
via-pubsub/src/util/: error.rs  mod.rs  opaque.rs
via-router/: Cargo.toml  README.md
via-router/benches/: traverse.rs
via-router/src/: lib.rs  path.rs  router.rs
via/src/: before.rs  cookies.rs  guard.rs  lib.rs  middleware.rs  next.rs  rest.rs
via/src/app/: mod.rs  service.rs
via/src/error/: catch.rs  macros.rs  mod.rs  raise.rs  rescue.rs  result.rs  server.rs
via/src/guard/: bytes.rs  error.rs  header.rs  media.rs  method.rs  mod.rs  predicate.rs
via/src/guard/header/: accept.rs  content_type.rs  media.rs  mod.rs  sequence.rs  tag.rs  value.rs
via/src/guard/on/: mod.rs  project.rs
via/src/request/: mod.rs  params.rs  payload.rs  query.rs
via/src/response/: body.rs  builder.rs  file.rs  mod.rs  redirect.rs
via/src/router/: allow.rs  mod.rs  route.rs  switch.rs
via/src/server/: accept.rs  cancel.rs  io.rs  mod.rs  tls.rs
via/src/server/tls/: mod.rs  native.rs  rustls.rs
via/src/util/: mod.rs  once.rs  sealed.rs  uri_encoding.rs
via/src/ws/: channel.rs  error.rs  io.rs  mod.rs  request.rs  run.rs  sha1.rs  upgrade.rs
via/src/ws/util/: future.rs  mod.rs  sha1.rs
