[package]
name = "via"
version = "2.0.0-gm.9"
authors = ["Zachary Golba <zachary.golba@postlight.com>"]
edition = "2024"
license = "MIT OR Apache-2.0"
description = "An async multi-threaded web framework for people who appreciate simplicity."
categories = ["web-programming::http-server"]
homepage = "https://github.com/zacharygolba/via"
repository = "https://github.com/zacharygolba/via"

[features]
default = ["http1"]

aws-lc-rs = ["dep:aws-lc-rs", "tokio-rustls/aws-lc-rs"]
ring = ["dep:ring", "tokio-rustls/ring"]

file = ["dep:httpdate", "tokio/fs"]

http1 = ["hyper/http1"]
http2 = ["hyper/http2"]

native-tls = ["dep:native-tls", "dep:tokio-native-tls"]
rustls = ["dep:rustls", "dep:tokio-rustls"]

tokio-tungstenite = ["dep:base64", "dep:futures-util", "dep:sha1", "dep:tungstenite", "dep:tokio-tungstenite"]
tokio-websockets = ["dep:base64", "dep:futures-util", "dep:sha1", "dep:tokio-websockets"]

[dependencies]
aws-lc-rs = { version = "1", optional = true }
base64 = { version = "0.22", optional = true }
bitflags = "2"
bytes = "1"
cookie = { version = "0.18", features = ["percent-encode"] }
delegate = "0.13"
futures-core = "0.3"
http = "1"
http-body = "1"
http-body-util = "0.1"
httpdate = { version = "1", optional = true }
hyper = { version = "1", features = ["server"] }
hyper-util = { version = "0.1", features = ["tokio"] }
percent-encoding = "2"
serde = { version = "1", features = ["derive"]  }
serde_json = "1"
sha1 = { version = "0.10", optional = true }
smallvec = { version = "1", features = ["serde"] }
tokio = { version = "1", features = ["macros", "net", "rt-multi-thread", "signal"] }
tokio-util = { version = "0.7", default-features = false }
tungstenite = { version = "0.28", optional = true }
tokio-tungstenite = { version = "0.28", optional = true }
tokio-websockets = { version = "0.13", features = ["ring", "server"], optional = true }
via-router = { version = "3.0.0-beta.32" }

[dependencies.futures-util]
version = "0.3"
default-features = false
features = ["sink", "std"]
optional = true

[dependencies.native-tls]
version = "0.2"
features = ["alpn"]
optional = true

[dependencies.tokio-native-tls]
version = "0.3"
optional = true

[dependencies.ring]
version = "0.17"
optional = true

[dependencies.rustls]
version = "0.23"
features = ["std"]
optional = true
default-features = false

[dependencies.tokio-rustls]
version = "0.26"
optional = true
default-features = false

[dev-dependencies]
dotenvy = "0.15"
cookie = { version = "0.18", features = ["percent-encode", "private"] }
rustls-pemfile = "2"
time = { version = "0.3" }
uuid = { version = "1", features = ["v4", "serde"] }

[[example]]
name = "echo"
path = "./examples/echo.rs"
required-features = ["tokio-tungstenite"]

[[example]]
name = "files"
path = "./examples/files.rs"
required-features = ["file"]

[[example]]
name = "hello"
path = "./examples/hello.rs"

[[example]]
name = "native-tls"
path = "./examples/tls/native.rs"
required-features = ["native-tls"]

[[example]]
name = "rustls-example"
path = "./examples/tls/rustls.rs"
required-features = ["aws-lc-rs", "rustls"]

[package.metadata.docs.rs]
features = ["file", "native-tls", "rustls", "tokio-tungstenite"]

[workspace]
members = ["via-router"]
