[package]
name = "via"
version = "2.0.0-gm.25"
authors = ["Zachary Golba <pino@hey.com>"]
edition = "2024"
license = "MIT OR Apache-2.0"
description = "An async multi-threaded web framework for people who appreciate simplicity."
categories = ["web-programming::http-server"]
homepage = "https://github.com/via-rs/via"
repository = "https://github.com/via-rs/via"

[features]
default = []

aws-lc-rs = ["dep:aws-lc-rs", "tokio-rustls/aws-lc-rs"]
ring = ["dep:ring", "tokio-rustls/ring"]

file = ["dep:httpdate", "tokio/fs"]

native-tls = ["dep:native-tls", "dep:tokio-native-tls", "hyper/http2"]
rustls-23 = ["dep:rustls", "dep:tokio-rustls", "hyper/http2"]

tokio-tungstenite = ["dep:base64", "dep:futures-util", "dep:ring", "dep:tungstenite", "dep:tokio-tungstenite"]
tokio-websockets = ["dep:base64", "dep:futures-util", "dep:ring", "dep:tokio-websockets"]

[dependencies]
aws-lc-rs = { version = "1", optional = true }
base64 = { version = "0.22", optional = true }
bitflags = "2"
bytes = "1"
cookie = { version = "0.18", features = ["percent-encode", "signed"] }
delegate = "0.13"
futures-core = "0.3"
http = "1"
http-body = "1"
http-body-util = "0.1"
httpdate = { version = "1", optional = true }
hyper = { version = "1", features = ["http1", "server"] }
hyper-util = { version = "0.1", features = ["tokio"] }
percent-encoding = "2"
serde = { version = "1", features = ["derive"]  }
serde_json = "1"
tokio = { version = "1", features = ["macros", "net", "rt-multi-thread", "signal"] }
tokio-util = { version = "0.7", default-features = false }
tokio-websockets = { version = "0.13", features = ["ring", "server"], optional = true }
via-router = { version = "3.0.0-beta.34" }

[dependencies.futures-util]
version = "0.3"
default-features = false
features = ["sink", "std"]
optional = true

[dependencies.native-tls]
version = "0.2"
features = ["alpn"]
optional = true

[dependencies.tokio-native-tls]
version = "0.3"
optional = true

[dependencies.tungstenite]
version = "0.28"
optional = true
default-features = false

[dependencies.tokio-tungstenite]
version = "0.28"
optional = true
features = ["stream"]
default-features = false

[dependencies.ring]
version = "0.17"
optional = true

[dependencies.rustls]
version = "0.23"
features = ["std"]
optional = true
default-features = false

[dependencies.tokio-rustls]
version = "0.26"
optional = true
default-features = false

[dev-dependencies]
rustls-pemfile = "2"
tokio = { version = "1", features = ["macros", "io-util", "rt-multi-thread"] }

[[example]]
name = "echo"
path = "./examples/echo.rs"

[[example]]
name = "files"
path = "./examples/files.rs"
required-features = ["file"]

[[example]]
name = "hello"
path = "./examples/hello.rs"

[[example]]
name = "native-tls"
path = "./examples/tls/native.rs"
required-features = ["native-tls"]

[[example]]
name = "rustls"
path = "./examples/tls/rustls.rs"
required-features = ["ring", "rustls-23"]

[package.metadata.docs.rs]
features = ["file", "native-tls", "rustls-23", "tokio-tungstenite"]

[workspace]
members = ["via-router"]
