[package]
name = "examples"
version = "0.0.0"
edition = "2024"
license = "MIT OR Apache-2.0"
publish = false

[features]
default = []

fs = ["via/fs"]

aws-lc-rs = ["via/aws-lc-rs"]
ring = ["via/ring"]

native-tls = ["via/native-tls"]
rustls-23 = ["via/rustls-23"]

tokio-tungstenite = ["via/tokio-tungstenite"]
tokio-websockets = ["via/tokio-websockets"]

# Internal

__test = ["fs", "ring", "tokio-tungstenite"]

[[example]]
name = "chat"
path = "./chat/src/main.rs"

[[example]]
name = "cookies"
path = "./cookies.rs"

[[example]]
name = "echo"
path = "./echo.rs"

[[example]]
name = "files"
path = "./files/main.rs"

[[example]]
name = "hello"
path = "./hello.rs"

[[example]]
name = "json"
path = "./json.rs"

[[example]]
name = "native-tls"
path = "./native-tls/main.rs"
required-features = ["native-tls"]

[[example]]
name = "rustls"
path = "./rustls/main.rs"
required-features = ["rustls-23"]

[dev-dependencies]
argon2 = "0.5"
base64 = "0.22"
bb8 = "0.9"
bitflags = { version = "2", features = ["serde"] }
cookie = { version = "0.18", features = ["percent-encode", "signed"] }
diesel = { features = ["time", "uuid"], version = "2" }
diesel-async = { version = "0.9", features = ["bb8", "postgres"] }
dotenvy = "0.15"
http = "1"
mime_guess = "2"
native-tls = { version = "0.2", features = ["alpn"] }
tokio-rustls = { version = "0.26", default-features = false }
serde = "1"
serde_json = "1"
time = { version = "0.3", features = ["serde"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
uuid = { version = "1", features = ["v4", "serde"] }
via = { path = "../via", version = "=2.0.0-gm.58" }
via-diesel = { version = "0.1.0-beta.0" }
zeroize = { version = "1", features = ["serde"] }
