[package]
name = "via-diesel"
version = "0.1.0-beta.3"
authors = ["Zakari Papa <pino@hey.com>"]
edition = "2024"
license = "MIT OR Apache-2.0"
description = "An async diesel integration for Via built on top of diesel-async."
homepage = "https://github.com/via-rs/via"
repository = "https://github.com/via-rs/via"

[dependencies]
diesel-async = "0.9"
diesel = "2"
http = "1"
via = { version = "=2.0.0-gm.61", path = "../via" }
