[package]
name = "via-pubsub"
version = "0.1.0"
edition = "2024"

[features]
tokio-tungstenite = ["via/tokio-tungstenite"]
tokio-websockets = ["via/tokio-websockets"]

[dependencies]
bytes = "1"
serde = { version = "1" }
serde_json = "1"
tokio = "1"
via = { version = "=2.0.0-gm.59", path = "../via" }

[dependencies.redis]
version = "1"
features = ["aio", "connection-manager", "tokio-comp"]
optional = true