[package]
name = "via-pubsub"
version = "0.1.0-beta.0"
authors = ["Zakari Papa <pino@hey.com>"]
edition = "2024"
license = "MIT OR Apache-2.0"
description = "A backend agnostic pubsub integration for Via with explicit lags semantics."
homepage = "https://github.com/via-rs/via"
repository = "https://github.com/via-rs/via"

[features]
native-tls = ["redis/tls-native-tls"]
rustls = ["redis/tls-rustls"]

tokio-tungstenite = ["via/tokio-tungstenite"]
tokio-websockets = ["via/tokio-websockets"]

__test = ["redis", "tokio-tungstenite", "via/ring"]

[dependencies]
base64 = "0.22"
bytes = "1"
hmac = "0.13"
http = "1"
serde = { version = "1" }
serde_json = "1"
sha2 = "0.11"
tokio = "1"
via = { version = "=2.0.0-gm.59", path = "../via" }
zeroize = "1"

[dependencies.redis]
version = "1"
features = ["aio", "connection-manager", "tokio-comp"]
optional = true
