[package]
name = "via"
version = "2.0.0-gm.39"
authors = ["Zakari Papa <pino@hey.com>"]
edition = "2024"
license = "MIT OR Apache-2.0"
readme = "../README.md"
description = "An async multi-threaded web framework for people who appreciate simplicity."
categories = ["web-programming::http-server"]
homepage = "https://github.com/via-rs/via"
repository = "https://github.com/via-rs/via"

[features]
default = []

aws-lc-rs = ["dep:aws-lc-rs", "rustls/aws_lc_rs", "tokio-rustls/aws_lc_rs"]
ring = ["dep:ring", "rustls/ring", "tokio-rustls/ring"]

file = ["dep:httpdate", "tokio/fs"]

native-tls = ["dep:native-tls", "dep:tokio-native-tls", "hyper/http2"]
rustls-23 = ["dep:rustls", "dep:tokio-rustls", "hyper/http2"]

tokio-tungstenite = [
    "dep:base64",
    "dep:futures-channel",
    "dep:futures-sink",
    "dep:futures-task",
    "dep:tungstenite",
    "dep:tokio-tungstenite"
]

tokio-websockets = [
    "dep:base64",
    "dep:futures-channel",
    "dep:futures-sink",
    "dep:futures-task",
    "dep:tokio-websockets"
]

# Internal

__test = ["ring", "tokio-tungstenite", "tokio/io-util"]

[dependencies]
aws-lc-rs = { version = "1", optional = true }
base64 = { version = "0.22", optional = true }
bitflags = "2"
bytes = "1"
cookie = { version = "0.18", features = ["percent-encode"] }
delegate = "0.13"
futures-channel = { version = "0.3", features = ["sink"], optional = true }
futures-core = "0.3"
futures-sink = { version = "0.3", optional = true }
futures-task = { version = "0.3", optional = true }
http = "1"
http-body = "1"
http-body-util = "0.1"
httpdate = { version = "1", optional = true }
hyper = { version = "1", features = ["http1", "server"] }
hyper-util = { version = "0.1", features = ["tokio"] }
percent-encoding = "2"
serde = { version = "1", features = ["derive"]  }
serde_json = "1"
tokio = { version = "1", features = ["macros", "net", "rt-multi-thread", "signal"] }
tokio-websockets = { version = "0.13", features = ["ring", "server"], optional = true }
via-router = { version = "3.0.0-beta.34" }

[dependencies.native-tls]
version = "0.2"
features = ["alpn"]
optional = true

[dependencies.tokio-native-tls]
version = "0.3"
optional = true

[dependencies.tungstenite]
version = "0.29"
optional = true
default-features = false

[dependencies.tokio-tungstenite]
version = "0.29"
optional = true
default-features = false

[dependencies.ring]
version = "0.17"
optional = true

[dependencies.rustls]
version = "0.23"
features = ["std"]
optional = true
default-features = false

[dependencies.tokio-rustls]
version = "0.26"
optional = true
default-features = false

[package.metadata.docs.rs]
features = ["file", "native-tls", "ring", "rustls-23", "tokio-tungstenite"]
